Translate config; unlink GUI from engine init requirement